--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -14,3 +14,28 @@
 	margin: 0 auto;
 }
 
+html, body {
+    height:100%;
+    margin:0;
+    padding:0;
+}
+
+.container-table {
+    display: table;
+    width: 100%;
+    height:100%;
+}
+.vertical-center-row {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.input-group-lg>.form-control, .input-group-lg>.input-group-addon, .input-group-lg>.input-group-btn>.btn {
+    height: 76px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
+
+
