--- a/src/main/resources/templates/access.html
+++ b/src/main/resources/templates/access.html
@@ -7,33 +7,38 @@
     <link rel="stylesheet" href="/static/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/app.css">
 </head>
-<body class="qrme">
-<section class="main">
-<div class="panel panel-success small-center-block">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            <i class="fa fa-sign-in"></i> Вход в Ваш личный кабинет
-        </h3>
-    </div>
-    <div class="panel-body">
-        <form action="/sign-in-handler" method="post">
-            <div th:if="${failed}">
-            <div class="alert alert-danger" role="alert">
-                    <span aria-hidden="true">Неверный пароль!</span>
+<div class="container container-table">
+    <div class="row vertical-center-row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="form-group input-group input-group-lg h col-md-12 col-xs-12">
+                    <h2>
+                        <i class="fa fa-sign-in"></i> Вход
+                    </h2>
             </div>
-            </div>
-            <div class="form-group">
-                <input type="hidden" name="qr" th:value="${qr}">
-                <label for="password">Пароль</label> <input id="password" type="password" name="password" class="form-control" placeholder="Password" required>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-success pull-left">Войти</button>
-            </div>
-        </form>
+            <form action="/sign-in-handler" method="post">
+                <div class="form-group input-group input-group-lg col-md-12 col-xs-12">
+                    <div th:if="${failed}">
+                        <div class="alert alert-danger" role="alert">
+                            <span aria-hidden="true">Неверный пароль!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group input-group h input-group-lg">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-eye-close"></span></span>
+                    <input name="password" type="password" class="form-control" placeholder="Пароль">
+                </div>
+                <div class="form-group input-group input-group-lg h col-md-8 col-md-offset-2 col-xs-12">
+                    <button type="submit" name="submit" value="Войти" class="btn btn-default form-control">
+                        <span class="glyphicon glyphicon-log-in"></span> Войти
+                    </button>
+                </div>
+                <div class="form-group input-group input-group-lg h col-md-8 col-md-offset-2 col-xs-12">
+                    <input type="hidden" name="qr" class="form-control" th:value="${qr}">
+                </div>
+            </form>
+        </div>
     </div>
 </div>
-</section>
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/bootstrap.js"></script>
-</body>
 </html>
