Исправление бага с переходом на главной странице

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,7 +15,7 @@
                     <i class="glyphicon glyphicon-share"></i> Введите Ваш ID:
                 </h2>
             </div>
-            <form>
+            <form onkeypress="if(event.keyCode == 13) return false;">
                 <div class="form-group input-group h input-group-lg">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span></span>
                     <input id="suffix" class="form-control" placeholder="ID">
