Исправление бага с переходом на белый экран, оптимизация верстки

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+select:focus, textarea:focus, input:focus {
+        font-size: 16px;
+    }
+}
 .qrme {
 	background-color: #eae8e7;
 	color: #222;
