--- a/src/main/resources/templates/custom-resource.html
+++ b/src/main/resources/templates/custom-resource.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/static/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/app.css">
 </head>
-<body class="qrme">
+<body id="custom">
 <section class="main">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 ">
-                      <h1>
-                       <i class="glyphicon glyphicon-pushpin"></i> <tr th:text="${message}"></tr>
+                      <h1 id="custom-text">
+                       <tr th:text="${message}"></tr>
                       </h1>
             </div>
         </div>
